[gd_scene load_steps=10 format=2]

[ext_resource path="res://shouting_thingy.tscn" type="PackedScene" id=1]
[ext_resource path="res://spectrumAnalyzer.gd" type="Script" id=2]
[ext_resource path="res://music/bensound-moose.ogg" type="AudioStream" id=3]
[ext_resource path="res://gui.tscn" type="PackedScene" id=4]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0, 0, 0, 1 )
metallic = 0.4
metallic_specular = 0.76
clearcoat_enabled = true
clearcoat = 1.0
clearcoat_gloss = 0.91

[sub_resource type="PlaneMesh" id=2]
size = Vector2( 50, 70 )

[sub_resource type="ProceduralSky" id=3]
sky_top_color = Color( 0.890196, 0.741176, 0.529412, 1 )
sky_horizon_color = Color( 0.980392, 0.839216, 0.839216, 1 )
ground_bottom_color = Color( 0.0431373, 0.0431373, 0.0470588, 1 )
ground_horizon_color = Color( 0.984314, 0.972549, 0.960784, 1 )

[sub_resource type="Environment" id=4]
background_sky = SubResource( 3 )
fog_enabled = true
fog_color = Color( 0.517647, 0.643137, 0.768627, 1 )
fog_depth_begin = 0.0
fog_depth_end = 150.0
fog_depth_curve = 0.965936
tonemap_mode = 3
tonemap_white = 4.63
ss_reflections_enabled = true
ssao_enabled = true
glow_enabled = true
glow_intensity = 8.0
glow_strength = 1.2
glow_hdr_luminance_cap = 90.77
glow_bicubic_upscale = true
adjustment_enabled = true
adjustment_brightness = 1.18
adjustment_saturation = 0.91

[sub_resource type="SpatialMaterial" id=5]
emission_enabled = true
emission = Color( 1, 0.807843, 0.298039, 1 )
emission_energy = 1.17
emission_operator = 0
emission_on_uv2 = false

[node name="SpectrumAnalyzer" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.64155, 0, 0 )
script = ExtResource( 2 )

[node name="Floor" type="MeshInstance" parent="."]
material_override = SubResource( 1 )
mesh = SubResource( 2 )
material/0 = null

[node name="Bars" type="Node" parent="."]

[node name="shouting_thingy" parent="Bars" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1.5, 0, 0, 0, 1, 0, -11.1639, 20.1943 )

[node name="shouting_thingy2" parent="Bars" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1.5, 0, 0, 0, 1, 0, -11.1639, 16.9846 )

[node name="shouting_thingy3" parent="Bars" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1.5, 0, 0, 0, 1, 0, -11.1639, 13.6487 )

[node name="shouting_thingy4" parent="Bars" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1.5, 0, 0, 0, 1, 0, -11.1639, 10.2169 )

[node name="shouting_thingy5" parent="Bars" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1.5, 0, 0, 0, 1, 0, -11.1639, 6.84029 )

[node name="shouting_thingy6" parent="Bars" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1.5, 0, 0, 0, 1, 0, -11.1639, 3.74234 )

[node name="shouting_thingy7" parent="Bars" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1.5, 0, 0, 0, 1, 0, -11.1639, 0.532657 )

[node name="shouting_thingy8" parent="Bars" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1.5, 0, 0, 0, 1, 0, -11.1639, -2.80328 )

[node name="shouting_thingy9" parent="Bars" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1.5, 0, 0, 0, 1, 0, -11.1639, -6.2351 )

[node name="shouting_thingy10" parent="Bars" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1.5, 0, 0, 0, 1, 0, -11.1639, -9.6117 )

[node name="shouting_thingy11" parent="Bars" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1.5, 0, 0, 0, 1, 0, -11.1639, -13.0217 )

[node name="shouting_thingy12" parent="Bars" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1.5, 0, 0, 0, 1, 0, -11.1639, -16.4535 )

[node name="shouting_thingy13" parent="Bars" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1.5, 0, 0, 0, 1, 0, -11.1639, -19.8301 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1.5924e-07, 0.211359, 0.977409, 3.44348e-08, 0.977409, -0.211359, -1, -3.55271e-15, -1.62921e-07, 10.059, 3.57347, 0 )
fov = 90.2

[node name="Tween" type="Tween" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" parent="CanvasLayer" instance=ExtResource( 4 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 4 )

[node name="CSGSphere" type="CSGSphere" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -30.2188, 28.5561, -2.55061 )
material_override = SubResource( 5 )
radius = 10.311
radial_segments = 25
rings = 11
[connection signal="play" from="CanvasLayer/GUI" to="." method="_on_GUI_play"]
[connection signal="slow_down" from="CanvasLayer/GUI" to="." method="_on_GUI_slow_down"]
[connection signal="speed_up" from="CanvasLayer/GUI" to="." method="_on_GUI_speed_up"]
